# SDL2-Tutorial

./: CMakeLists.txt
cmake/: FindSDL2.cmake
headers/: functions4.h  functions5.h  functions6.h  functions7.h
headers/10/: LTexture.h  functions10.h
headers/4/: functions4.h
headers/5/: functions5.h
headers/6/: functions6.h
headers/7/: functions7.h
headers/8/: functions8.h
lessons/1/: main.cpp
lessons/10/: main10.cpp
lessons/10/sources/: LTexture.cpp
lessons/11/: main.cpp
lessons/11/headers/: LTexture.h  functions.h
lessons/11/sources/: LTexture.cpp  functions.cpp
lessons/12/: main.cpp
lessons/12/headers/: LTexture.h  functions.h
lessons/12/sources/: LTexture.cpp  functions.cpp
lessons/13/: main.cpp
lessons/13/headers/: LTexture.h  functions.h
lessons/13/sources/: LTexture.cpp  functions.cpp
lessons/14/: main.cpp
lessons/14/headers/: functions.h
lessons/14/sources/: LTexture.cpp  functions.cpp
lessons/15/: main.cpp
lessons/15/headers/: LTexture.h  functions.h
lessons/15/sources/: LTexture.cpp  functions.cpp
lessons/16/: main.cpp
lessons/16/headers/: LTexture.h  functions.h
lessons/16/sources/: LTexture.cpp  functions.cpp
lessons/17/: main.cpp
lessons/17/headers/: LButton.h  LTexture.h  buttonInfo.h  functions.h
lessons/17/sources/: LButton.cpp  (+2 more)
lessons/18/: main.cpp
lessons/2/: main2.cpp
lessons/22/: main.cpp
lessons/23/: main.cpp
lessons/24/: main.cpp
lessons/25/: main.cpp
lessons/4/: main4.cpp
lessons/5/: main5.cpp
lessons/6/: main6.cpp
lessons/7/: main7.cpp
mains/: main10.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp
sources/: functions10.cpp  functions4.cpp  functions5.cpp  functions6.cpp  functions7.cpp  functions8.cpp
sources/10/: LTexture.cpp  functions10.cpp
sources/4/: functions4.cpp
sources/5/: functions5.cpp
sources/7/: functions7.cpp
(+27 files in other folders)
